# password_manager

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  development.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 497be6fc1716_initial_migration.py  dcbbbeb1f071_recreate_migrations.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: password.py
backend/app/core/: config.py  db.py  security.py
backend/scripts/: prestart.sh  test.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_password.py
backend/tests/crud/: test_crud_password.py  test_user.py
backend/tests/factories/: password_data_factory.py
backend/tests/scripts/: test_backend_pre_start.py
scripts/: build.sh
