[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Platonov"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.15.2,<2.0.0)",
    "uv (>=0.6.12,<0.7.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "redis (>=4.2.0rc1,<5.0.0)",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0) ; python_version >= \"3.8\" and python_version < \"4.0\"",
    "pydantic[email] (>=2.11.2,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "psycopg-binary (>=3.2.6,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.0"
httpx = "^0.28.1"
mimesis = "^18.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
